# dataverse_utils

./: .gitignore  404.html  LICENCE.md  README.md  dataverse_utils.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml
api_ref/: index.html
common_workflows/: index.html
credits/: index.html
dataverse_utils/: __init__.py  dataverse_utils.py  ldc.py
dataverse_utils/data/: LDC_EULA_general.md
dataverse_utils/scripts/: dv_manifest_gen.py  dv_record_copy.py  dv_release.py
docs/: api_ref.md  common_workflows.md  credits.md  faq.md  index.md  scripts.md  windows.md
faq/: index.html
samples/: dv_tsv_uploader.py
scripts/: dv_del.py  dv_ldc_uploader.py  dv_manifest_gen.py  dv_pg_facet_date.py  dv_release.py  dv_upload_tsv.py  dvdel.py  index.html  ldc_uploader.py  manifest_generator.py
search/: search_index.json
src/dataverse_utils/: __init__.py  collections.py  dataverse_utils.py  dvdata.py  ldc.py
src/dataverse_utils/scripts/: dv_collection_info.py  dv_del.py  dv_ldc_uploader.py  dv_list_files.py  dv_manifest_gen.py  dv_pg_facet_date.py  dv_readme_creator.py  dv_record_copy.py  dv_release.py  dv_replace_licence.py  dv_replace_licenses.py  dv_study_migrator.py  dv_upload_tsv.py
tests/: dv_frankenstein_complete_api_output.json  get_collection_listing.json  test_collections.py  tests_dataverse_utils.py
tmp/: requirements.txt  setup.py
windows/: index.html
