[build-system]
# Minimum requirements for the build system to execute.
requires = ['setuptools>=61', 'setuptools_scm[toml]>=6.2']  # PEP 508 specifications.
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['src']  # list of folders that contain the packages (['.'] by default)
include = ['dataverse_utils*']  # package names should match these glob patterns (['*'] by default)
exclude = ['tests*']  # exclude packages matching these glob patterns (empty by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
data = ['*md']

[tool.setuptools.dynamic]
version = {attr = 'dataverse_utils.VERSION'}
dependencies = {file = 'requirements.txt'}

[project]
name = 'dataverse_utils'
description = 'Utilities for the Dataverse data respository system'
readme = 'README.md'
keywords =['Harvard Dataverse', 'Dataverse', 'research data management', 'data repository'] 
authors = [{name='Paul Lesack', email='paul.lesack@ubc.ca'}]
classifiers = ['Development Status :: 4 - Beta',
			   'Environment :: Console',
			   'Intended Audience :: Education',
			   'License :: OSI Approved :: MIT License',
			   'Topic :: Education',
			   'Topic :: Internet :: WWW/HTTP :: Site Management',
			   'Topic :: Utilities']
requires-python = '>=3.6'
dynamic = ['version', 'dependencies']

#optional-dependencies = {server = ['psycopg2-binary']} #or as below
[project.optional-dependencies]
server = ['psycopg2-binary']

[tools.setuptools]
license-files = ['LICEN[CS]*']

[project.urls]
Homepage = 'https://ubc-library-rc.github.io/dataverse_utils'
#Documentation = 'https://ubc-library-rc.github.io/dataverse_utils'
Repository = 'https://github.com/ubc-library-rc/dataverse_utils.git'
'Issue Tracker' = 'https://github.com/ubc-library-rc/dataverse_utils/issues'
#changelog = 'https://github.com/me/spam/blob/master/CHANGELOG.md'

[project.scripts]
#This should be restructured one day
dv_del = 'dataverse_utils.scripts.dv_del:main'
dv_ldc_uploader = 'dataverse_utils.scripts.dv_ldc_uploader:main'
dv_manifest_gen = 'dataverse_utils.scripts.dv_manifest_gen:main'
dv_pg_facet_date = 'dataverse_utils.scripts.dv_pg_facet_date:main [server]'
dv_record_copy = 'dataverse_utils.scripts.dv_record_copy:main'
dv_release = 'dataverse_utils.scripts.dv_release:main'
dv_replace_licence = 'dataverse_utils.scripts.dv_replace_licences:main'
dv_replace_license = 'dataverse_utils.scripts.dv_replace_licences:main'
dv_upload_tsv = 'dataverse_utils.scripts.dv_upload_tsv:main'
