[project]
name = "dataverse-utils"
version = "0.22.3a0"
description = "Utilities for the Dataverse data respository system"
authors = [
    {name = "Paul Lesack",email = "paul.lesack@ubc.ca"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10, <4.0"
#When requests 2.33 is released, update poetry and release
dependencies = [
    "requests (>=2.30.0,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "markdown (>=3.10.2,<4.0.0)",
    "markdown-pdf (>=1.13.1,<2.0.0)",
    "markdownify (>=1.2.2,<2.0.0)",
    "pyreadr (>=0.5.4,<0.6.0)",
    "pyreadstat (>=1.3.3,<2.0.0)",
    "requests-toolbelt (>=1.0.0,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "dryad2dataverse (>=0.8.4,<0.9.0)",
    "chardet (>=5.2,<5.3)"
]
#Chardet and requests will need to be changed when requests goes to 2.32; at that
#point just remove chardet 
keywords =['Harvard Dataverse', 'Dataverse', 'research data management', 'data repository'] 

[tool.poetry]
packages = [{"include" = "dataverse_utils", "from"="src"}]

[tool.poetry.group.server]
optional = true

[tool.poetry.group.server.dependencies]
psycopg2-binary = ">=2.9.10"

[project.scripts]

dv_collection_info = 'dataverse_utils.scripts.dv_collection_info:main'
dv_del = 'dataverse_utils.scripts.dv_del:main'
dv_ldc_uploader = 'dataverse_utils.scripts.dv_ldc_uploader:main'
dv_list_files = 'dataverse_utils.scripts.dv_list_files:main'
dv_manifest_gen = 'dataverse_utils.scripts.dv_manifest_gen:main'
dv_pg_facet_date = 'dataverse_utils.scripts.dv_pg_facet_date:main [server]'
dv_readme_creator = 'dataverse_utils.scripts.dv_readme_creator:main'
dv_record_copy = 'dataverse_utils.scripts.dv_record_copy:main'
dv_release = 'dataverse_utils.scripts.dv_release:main'
dv_replace_licence = 'dataverse_utils.scripts.dv_replace_licence:main'
dv_replace_license = 'dataverse_utils.scripts.dv_replace_licence:main'
dv_study_migrator = 'dataverse_utils.scripts.dv_study_migrator:main'
dv_upload_tsv = 'dataverse_utils.scripts.dv_upload_tsv:main'
[project.urls]
Homepage = 'https://ubc-library-rc.github.io/dataverse_utils'
Repository = 'https://github.com/ubc-library-rc/dataverse_utils.git'
'Issue Tracker' = 'https://github.com/ubc-library-rc/dataverse_utils/issues'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
